# word-data-collector

./: Pipfile  README.md  setup.cfg
word-data-collector/: _base.py  dictionary_getter.py  image_getter.py  voice_getter.py
word_data_collector/: dictionary_getter.py  examples.py  image_getter.py  voice_getter.py
