[metadata]
name = word-data-collector
version = 0.0.1
author = Daisuke Sonoda
author_email = mail@daisukesonoda.com
license = file: LICENSE
description = Download the media data for the words you entered.
url = https://github.com/dsonoda/word-data-collector
long_description = file: README.md

[options]
packages = find:
install_requires = requests==2.24.0
